--- a/public/blog/configuracion/index.css
+++ b/public/blog/configuracion/index.css
@@ -3,9 +3,23 @@
     padding: 0;
 }
 
+body {
+    transition: all .5s;
+}
+
 body.dark {
     background: #333;
     color: white;
+}
+
+body.dark input[type=text],
+body.dark .configuraciones > textarea {
+    background: transparent;
+    color: white;
+}
+
+body.dark #boolean {
+    color: black;
 }
 
 .row {
@@ -380,310 +394,179 @@ body.dark {
     z-index: 100000;
 }
 
-/* Perfil */
-.perfil {
-    margin-top: 90px;
-    min-height: 80vh;
-}
-
-.perfil > #intro {
-    text-align: center;
-    font-size: 30px;
-    padding-top: 15px;
-    font-weight: 600;
-}
-
-.divCentral {
+/* Config */
+.config {
+    margin-top: 100px;
     width: 100%;
-    display: flex;
-    justify-content: space-around;
-}
-
-.lateral.dark {
-    background: #333;
-    color: white;
-}
-
-.lateral {
-    width: 25%;
+    min-height: 80vh;
     display: flex;
     flex-direction: column;
     align-items: center;
-    background: white;
-    color: black;
-    min-height: 70vh;
-    padding: 10px;
-    border-bottom: 1px solid rgb(0 0 0 / 30%);
-    box-shadow: inset 0px 0px 8px 2px rgb(0 0 0 / 30%);
 }
 
-.lateral > img {
-    max-width: 110px;
-    max-height: 250px;
-    border-radius: 50%;
-    margin-top: 25px;
-    border: 1px solid rgb(0 0 0 / 30%);
-}
-
-.lateral > label {
+.config > h1 {
     margin-top: 15px;
-    font-weight: 600;
-    font-size: 18px;
+    margin-bottom: 25px;
 }
 
-#correoLateral {
-    margin-bottom: 10px;
-}
-
-.lateral > .togglePerfil:hover {
-    background-color: rgb(0 0 0 / 30%);
-}
-
-.lateral > .togglePerfil {
-    margin: 5px 0;
-    border-top: 1px solid rgb(0 0 0 / 30%);
-    border-bottom: 1px solid rgb(0 0 0 / 30%);
-    width: 100%;
-    padding: 10px;
-    font-weight: 600;
-    font-size: 17px;
-    cursor: pointer;
-    transition: all .5s;
-}
-
-.window.dark {
-    background: #333;
-    color: white;
-}
-
-.window.dark input,
-.window.dark textarea {
-    color: white;
-}
-
-.window.dark input::placeholder,
-.window.dark textarea::placeholder {
-    color: white;
-}
-
-.window.dark .display-table > span {
-    color: black;
-}
-
-.window.dark .display-table > input {
-    color: white;
-    background: transparent;
-}
-
-.window.dark .passwordInputs > input {
-    color: white;
-    background: transparent;
-}
-
-.window.dark #correo {
-    color: white;
-    background: transparent;
-}
-
-.caracteristicas {
+.config > .configuraciones {
+    width: 75%;
     display: flex;
     flex-direction: column;
-    align-items: stretch;
-    background: white;
-    color: color;
-    width: 70%;
-    padding: 20px;
-    border-bottom: 1px solid rgb(0 0 0 / 30%);
-    box-shadow: inset 0px 0px 8px 2px rgb(0 0 0 / 30%);
+    align-items: center;
+    justify-content: center;
 }
 
-.caracteristicas > h2 {
-    text-align: center;
-    margin: 10px 0;
-}
-
-.caracteristicas > strong {
-    padding: 5px;
-    font-size: 20px;
-}
-
-.caracteristicas > label {
-    font-size: 18px;
+.configuraciones > label,
+.configuraciones > #publicSpan {
     font-weight: 600;
+    font-size: 20px;
+    margin-bottom: 5px;
+    width: 75%;
+    text-align: center;
+    padding-top: 10px;
+    border-top: 1px solid rgb(0 0 0 / 30%);
 }
 
-.caracteristicas > input:focus-visible {
+.configuraciones > input[type=text]:focus-visible,
+.configuraciones > textarea {
     outline: none;
 }
 
-.caracteristicas > input::placeholder,
-.caracteristicas > textarea::placeholder {
-    color: rgba(0, 0, 0, 0.596);
-    font-weight: 600;
+.configuraciones > input[type=text] {
+    width: 50%;
+    border: none;
+    border-bottom: 1px solid orange;
+    margin-bottom: 25px;
+    padding: 5px;
+    font-size: 18px;
+}
+
+.configuraciones > textarea {
+    width: 65%;
+    border: 1px solid orange;
+    margin-bottom: 25px;
+    padding: 10px;
+    font-size: 18px;
+}
+
+#public {
+    display: none;
+}
+
+.configuraciones > #boolean {
+    font-family: FontAwesome;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #4fcc4f;
+    width: 70px;
+    height: 35px;
+    border: 1px solid rgb(0 0 0 / 30%);
+    border-radius: 100px;
+    position: relative;
+    cursor: pointer;
+    transition: .5s;
+}
+
+#boolean::after {
+    content: "\f00c";
+    display: flex;
+    width: 27px;
+    height: 27px;
+    background: white;
+    border-radius: 100px;
+    border: 1px solid black;
+    position: absolute;
+    top: 3px;
+    left: 4px;
+    transition: .5s;
+    align-items: center;
+    justify-content: center;
+}
+
+#public:checked + #boolean {
+    background: #ff3d3d;
+}
+
+#public:checked + #boolean::after {
+    content: "\f00d";
+    left: 36px;
+}
+
+.hr {
+    margin-top: 20px;
+    margin-bottom: 10px;
+    border-top: 1px solid rgb(0 0 0 / 50%);
+    width: 75%;
     opacity: .75;
 }
 
-.caracteristicas > input {
-    padding: 5px;
-    background: transparent;
-    border: none;
-    border-bottom: 1px solid orange;
-    border-radius: 5px;
-    margin-top: 5px;
-    font-size: 18px;
-}
-
-.caracteristicas > textarea:focus-visible {
-    outline: none;
-}
-
-.caracteristicas > textarea {
-    background: transparent;
-    border: 1px solid orange;
-    padding: 10px;
-    border-radius: 5px;
-    margin-top: 5px;
-    font-size: 18px;
-    resize: none;
-}
-
-.caracteristicas > .display-table {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    margin-bottom: 10px;
-}
-
-.caracteristicas > .display-table > span {
-    min-width: 183px;
-    background: rgb(255, 220, 154);
-    border: 1px solid rgb(0 0 0 / 30%);
-    border-right: none;
-    padding: 10px;
-    text-align: center;
-}
-
-.caracteristicas > .display-table > input:focus-visible {
-    outline: none;
-}
-
-.caracteristicas > .display-table > input {
-    width: 75%;
-    height: 45px;
-    padding: 10px;
-}
-
-.imgDePerfil {
+.dangerZone {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
+    border: 1px solid red;
+    padding: 10px;
+    border-radius: 5px;
+    margin-top: 25px;
+    width: 50%;
+}
+
+.dangerZone > p {
+    font-size: 20px;
+    font-weight: 600;
+    color: red;
+    text-shadow: 1px 1px 1px rgb(0 0 0 / 30%);
+}
+
+.dangerZone > label {
+    font-weight: 600;
+    font-size: 20px;
+    margin: 10px 0px;
+}
+
+.windowDanger {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #000000d9;
+    z-index: 1000;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.contentBox {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     background: white;
-    color: color;
-    width: 70%;
-    padding: 20px;
-    border-bottom: 1px solid rgb(0 0 0 / 30%);
-    box-shadow: inset 0px 0px 8px 2px rgb(0 0 0 / 30%);
-}
-
-.imgDePerfil > h2 {
-    text-align: center;
-    margin: 10px 0;
-}
-
-.imgDePerfil > .vistaPrevia {
-    width: 90%;
-    margin-top: 20px;
-    border: 2px solid rgb(0 0 0 / 50%);
-    height: 300px;
-    background: rgb(0 0 0 / 30%);
-}
-
-.vistaPrevia > .sinImg,
-.vistaPrevia > .conImg {
     padding: 10px;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-
-.vistaPrevia > .sinImg > img,
-.vistaPrevia > .conImg > img {
-    height: 270px;
-    max-height: 270px;
-}
-
-#imgParaSubir {
+    border-top: 20px solid red;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
     font-size: 25px;
 }
 
-#guardarImg {
+.contentBox > p {
+    padding: 0 10px;
+}
+
+.contentBox > .btns {
+    width: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.contentBox > .btns > button {
     font-size: 20px;
-}
-
-.password {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background: white;
-    color: color;
-    width: 70%;
-    padding: 20px;
-    border-bottom: 1px solid rgb(0 0 0 / 30%);
-    box-shadow: inset 0px 0px 8px 2px rgb(0 0 0 / 30%);
-}
-
-.password > .correo {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-}
-
-.password > .correo > p {
-    font-size: 18px;
-    border: 1px solid black;
-    padding: 10px;
-}
-
-#correo:focus-visible {
-    outline: none;
-}
-
-#correo {
-    margin-left: 5px;
-    border: none;
-    border-bottom: 1px solid orange;
-}
-
-.password > .correo > button {
-    border: 1px solid black;
-    height: 49px;
-    border-radius: 0;
-}
-
-.correo > button > i {
-    font-size: 18px;
-}
-
-.passwordInputs {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-}
-
-.passwordInputs > input {
-    width: 75%;
-    margin-bottom: 10px;
-    padding: 10px;
-    font-size: 18px;
-}
-
-#guardarCuenta {
-    font-size: 18px;
 }
 
 
@@ -826,9 +709,6 @@ df-messenger {
 
 
 
-
-
-
 /* Media queries */
 @media (max-width: 800px) {
 
@@ -855,34 +735,5 @@ df-messenger {
 
     #enlaces.active > .enlace {
         margin-bottom: 25px;
-    }
-
-    .divCentral {
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .lateral {
-        width: 95%;
-        margin-bottom: 15px;
-        box-shadow: none;
-    }
-
-    .caracteristicas,
-    .imgDePerfil,
-    .password {
-        width: 95%;
-    }
-
-}
-
-@media (max-width: 575px) {
-    .footer > .row > div {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        margin: 5px 0px;
-        padding: 20px;
-        border-bottom: 1px solid white;
     }
 }
