--- a/public/css/auth.css
+++ b/public/css/auth.css
@@ -64,6 +64,10 @@ body > h1 {
     width: 100%;
 }
 
+#cerrarSesion {
+    margin-top: calc(10px);
+}
+
 .abcRioButton {
     width: 100% !important;
 }
