--- a/public/foro/index.css
+++ b/public/foro/index.css
@@ -411,6 +411,75 @@ body.dark .ctgs > li {
     cursor: pointer;
 }
 
+/* Discusion */
+.discusion {
+    width: 100%;
+    margin-top: 100px;
+    min-height: 80vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.discusion > h1 {
+    margin: 20px 0;
+}
+
+.form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+}
+
+.form > label {
+    font-weight: 600;
+    font-size: 22px;
+    margin: 10px 0;
+}
+
+.form > input:focus-visible,
+.form > .textareas > textarea,
+#resultadoTextarea {
+    outline: none;
+}
+
+.form > input {
+    border: none;
+    border-bottom: 1px solid orange;
+    background: transparent;
+    font-size: 18px;
+    padding: 5px;
+    width: 50%;
+}
+
+.form > .textareas {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.textareas > textarea,
+#resultadoTextarea {
+    width: 45%;
+    height: 250px;
+    padding: 5px;
+    border: 1px solid orange;
+    resize: none;
+    font-size: 18px;
+}
+
+#resultadoTextarea {
+    overflow: auto;
+    word-break: break-all;
+}
+
+.iniciar {
+    margin-top: 25px;
+}
+
 
 /* Footer */
 .footer {
