--- a/public/blog/articulos/css/index.css
+++ b/public/blog/articulos/css/index.css
@@ -1035,7 +1035,7 @@ df-messenger {
 
 .textareas {
     width: 50%;
-    min-height: 50vh;
+    min-height: 75vh;
     resize: none;
     padding: 10px;
     border: 1px solid orange;
@@ -1158,6 +1158,12 @@ df-messenger {
     border-bottom: 1px solid orange;
 }
 
+.sinCtg > div > p {
+    text-align: center;
+    font-size: 20px;
+    font-weight: 600;
+}
+
 #imgDeVentana,
 #imgPortadaUrl {
     width: 100%;
@@ -1198,6 +1204,13 @@ df-messenger {
     flex-direction: row;
     justify-content: space-around;
     margin-top: 15px;
+}
+
+#categoriasLista {
+    margin-top: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
 }
 
 #categoriasLista > li {
@@ -1560,6 +1573,10 @@ df-messenger {
         width: 100% !important;
         height: 490px;
         overflow: auto;
+    }
+
+    #categoriasLista {
+        flex-direction: column;
     }
 }
 
